...
                                <rect key="frame" x="20" y="219" width="374" height="41"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.loginButton">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="159" width="374" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.passwordTextField">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="104" width="374" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.usernameTextField">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3dH-wF-0Rc">
                                <rect key="frame" x="20" y="268" width="366" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.createNewAccount">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="60" width="374" height="40"/>
                                <color key="backgroundColor" name="FTBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignUpVC.usernameTextField">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="115" width="374" height="40"/>
                                <color key="backgroundColor" name="FTBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignUpVC.emailTextField">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="170" width="374" height="40"/>
                                <color key="backgroundColor" name="FTBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignUpVC.passwordTextField">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                <rect key="frame" x="20" y="285" width="374" height="60"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignUpVC.signUpButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="Wpu-uo-xTj"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="DQZ-nl-H20">
                        <barButtonItem key="leftBarButtonItem" title="View as List" id="Dan-u4-SNr">
                            <connections>
                                <segue destination="Bfy-7O-CJg" kind="show" identifier="showTrucksTableVC" id="f8M-WS-c0f"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Filter Trucks" id="wKM-8V-Dbi">
                            <connections>
                                <segue destination="eZO-Li-BiO" kind="presentation" identifier="modalFilterVC" id="iuz-Gs-dkI"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                <state key="normal" title="Menu">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="160-XH-Dgi" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="person.badge.minus" catalog="system" id="vC4-pg-7CD"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AMT-kg-kPg">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Truck List" id="uXg-LX-ELM"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uc3-n6-Jba" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                <color key="tintColor" name="FTBackgroundColor"/>
                                <inset key="contentEdgeInsets" minX="50" minY="20" maxX="50" maxY="20"/>
                                <state key="normal" title="Apply Filters"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
...
