...
    private var cuisineTypes = Cuisine.allCases.map { $0.rawValue }

    // MARK: - View Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        cuisineTypes.insert("All Cuisines", at: 0)
        pickerView.delegate = self
        pickerView.dataSource = self
        setFilters()
    }
    
    // MARK: - Actions - Public
...
